force-app/main/default/objects/Event_Expense_Approval_History__c/Event_Expense_Approval_History__c.object-meta.xml
<CustomObject>
    <label>Event Expense Approval History</label>
    <nameField>
        <displayFormat>EEAH-{00000000}</displayFormat>
        <label>Event Expense Approval History Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Event Expense Approval History</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>