force-app/main/default/objects/Event_Expense_Approval_History__c/fields/Approver_s_Level__c.field-meta.xml
<CustomField>
    <fullName>Approver_s_Level__c</fullName>
    <label>Approver&apos;s Level</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>1</fullName>
            </value>
            <value>
                <fullName>2</fullName>
            </value>
            <value>
                <fullName>3</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>