force-app/main/default/objects/Event_Expense_Approval_History__c/fields/Event_Expense__c.field-meta.xml
<CustomField>
    <fullName>Event_Expense__c</fullName>
    <label>Event Expense</label>
    <referenceTo>Event_Expense__c</referenceTo>
    <relationshipLabel>Event Expense Approval History</relationshipLabel>
    <relationshipName>Event_Expense_Approval_History</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>