force-app/main/default/objects/Event_Expense_Approval_History__c/fields/Is_Archive__c.field-meta.xml
<CustomField>
    <fullName>Is_Archive__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Archive</label>
    <type>Checkbox</type>
</CustomField>