force-app/main/default/objects/Event_Expense_Approval_History__c/fields/Status_TimeStamp__c.field-meta.xml
<CustomField>
    <fullName>Status_TimeStamp__c</fullName>
    <label>Status TimeStamp</label>
    <type>DateTime</type>
</CustomField>